Avoid horizontal scroll bar on small screens

--- a/app/assets/stylesheets/darkswarm/_shop-inputs.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-inputs.scss
@@ -6,6 +6,10 @@
 .darkswarm {
   // #search
   @include placeholder(rgba(0, 0, 0, 0.4), #777);
+
+  .row .columns.variant-quantity-column {
+    padding-left: 0;
+  }
 }
 
 .reveal-modal.product-bulk-modal {
